docs/miniprogram/3.8/question.md
---
title: 常见问题
sidebar_position: 8
---

### 小程序不上报Page事件了？

* 请检查小程序内是否有重写Page的逻辑，或者使用了第三方类似带有动效的Page插件。

### 初始化开启forceLogin以后不上报任何事件了？

* 请[参考文档](/docs/miniprogram/3.8/initSettings#forcelogin)正确使用。

### 初始化开启forceLogin以后直至调用 identify 方法之前的数据是怎么处理的？

* 初始化开启forceLogin以后SDK依然会采集数据，但会存在内存中。调用identify方法时会全量替换访问用户Id为指定值后一次性打包进行上报，并不会丢失数据。
* 但如果用户在您调用identify方法之前退出小程序，此次访问数据会完全丢失。因此建议您在用户进入小程序后尽快通过微信登录获取openId(或unionId)调用identify方法上报数据。

### 3.0版本SDK支持 mpvue 和 WePY1.x，3.8版本不支持了？

* mpvue官方已经不维护两年之久，且依然存在较多的开发问题，故我们认为它已经被放弃，请尝试升级到其他框架。
* WePY2.x已经出现许久，且依然存在较多的开发问题，故我们已放弃对WePY1.x的支持，请尝试升级到WePY2.0或其他框架。

### 淘宝小程序上报事件时平台类型是支付宝？

* 因为阿里系的小程序都是以支付宝小程序的框架为底层逻辑，基础api都是通用的。

### 我们对SDK大小有要求，如何移除多余功能插件？

* 目前暂不支持自助热插拔插件，如有需要请联系我们的技术支持。

### 新版SDK支持京东小程序、快手小程序吗？

* 我们的工程师正在加紧适配中，敬请期待。

### 我们使用的3.0版本SDK，一定要升级吗？

* 如果您认为当前版本已满足需求且没有其他Bug，可以选择不升级，但3.0版本SDK不再进行新功能迭代。

### 小程序SDK支持小程序插件的数据采集吗？

* 不支持。

### 使用了3.8版本的SDK以后运营SDK(弹窗、资源位)组件报错或无法使用了？

* 新版SDK架构调整导致存取值逻辑不同导致。请同步升级运营SDK即可，无需做其他修改。

### 支付宝小程序已添加白名单发布后仍收不到数据？

* 请检查是否为先发布后添加白名单，添加白名单后重新发布即可。

### 为何小程序挂起后再进入有时是同一次访问(即访问用户Id一致)有时又会是一次新的访问(即访问用户Id不一致)？

* 请检查用户使用场景，以下两种场景会被SDK视为一次新的访问：

* > 两次进入场景值不一致(即进入方式不同)。
* > 两次进入场景值一致，但间隔超过keepAlive(详情请见初始化配置项)指定值(默认为5分钟)。

### 小程序SDK是否支持多种框架混合开发？

* 暂不支持，请使用单一框架开发以降低成本。

### 我们有多个环境的appId，是否可以通过接口调用获取到appId后再初始化SDK？

* 不可以，SDK初始化必须在小程序初始化加载之前，待可以接口调用时，小程序已经初始化完成。
* 如果您有多个小程序appId用于区分测试和生产环境，可以通过本地判断的方式。

### 如何查看当前SDK的版本号和环境？

* 直接在开发者工具控制台或代码中调用 `global.gioSDKVersion` 和 `global.gioEnvironment` 即可获取到当前SDK的版本号和环境。
